- 이미지 패턴 기능 구현 - 인텔리J 설정값 커밋